--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
    <body>
       <div class="contenedor">
          <div class="titulo">
-            <h1>¿Quieres ser mi novia?</h1>
+            <h1>¿Quieres jugar valorant?</h1>
          </div>
          <div class="opciones">
             <p class="p1">No</p>
